# blazecast

./: LICENSE  README.md  package-lock.json  package.json
.github/: CODEOWNER  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/auto/: auto_start.rs
src-tauri/src/commands/: fetch_app.rs  mod.rs  window_resize.rs
src-tauri/src/commands/clip_board/: clear_clipboard.rs  image_handler.rs  mod.rs  read_clipboard.rs  storage.rs  write_clipboard.rs
src-tauri/src/commands/fetch_app/: app_index.rs  app_registry.rs  categorization.rs  commands.rs  icons.rs  mod.rs  models.rs
src-tauri/src/commands/quick_link/: command_input.rs  commands.rs  executor.rs  mod.rs  models.rs  quick_link.rs  state.rs  storage.rs
src-tauri/wix/: license.rtf  wix-template.wxs
src/components/: commandInput.tsx  suggestionItems.tsx  suggestionList.tsx
src/components/calculator/: CalculatorFooterProps.tsx  calculator.tsx
src/components/clipBoard/: clipBoardHistory.tsx  clipBoardimg.tsx
src/components/manualAppEntry/: ManualAppEntry.tsx
src/components/quickLink/: QuickLinkModalProps.tsx  quickLinkCreator.tsx  quickLinkQueryExe.tsx
src/hooks/: useAppNavigation.ts  useCalculator.ts  useCategorizedSuggestions.ts  useClipboard.ts  useQuickLinks.ts  useSuggestion.ts
src/types/: index.ts
src/utils/: formatters.ts
