[package]
name = "blazecast"
version = "0.1.0"
description = "A Windows launcher with app indexing"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "global-shortcut-all", "shell-open", "system-tray", "global-shortcut", "window-hide", "window-show", "window-close", "window-set-focus", "clipboard-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.3"
uuid = { version = "1.4", features = ["v4"] }
base64 = "0.21"
winreg = "0.11"
winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
arboard = "3.5.0"
aes-gcm = "0.10.1"
rand = "0.8.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
